Fixing infinite recursion issue with OddEvenMerge when input size is greater than four.
Modifying TestOddEvenMerge to test sorting for input of size eight.

Adding a constructor for OddEvenMerge with the mergePresortedHalves flag to allow merging
a list with individually sorted halves into a fully sorted list.

Adding a test in TestOddEvenMerge for the mergePresortedHalves flag.